deploy: c5291e08ccd2a08808f1dc12227c5c64cdeb7162

--- a/begrippen-per-onderdeel.html
+++ b/begrippen-per-onderdeel.html
@@ -23,7 +23,7 @@
 <header id="title-block-header">
 <h1 class="title">Begrippen per onderdeel</h1>
 <p class="author">Steven Speek</p>
-<p class="date">dinsdag 25 juni 2024</p>
+<p class="date">donderdag 18 juli 2024</p>
 </header>
 <h2 id="inleiding">Inleiding</h2>
 <ul>
