--- a/oefeningen.html
+++ b/oefeningen.html
@@ -23,7 +23,7 @@
 <header id="title-block-header">
 <h1 class="title">Oefeningen voor de Linux beginnerscursus</h1>
 <p class="author">Steven Speek</p>
-<p class="date">dinsdag 25 juni 2024</p>
+<p class="date">donderdag 18 juli 2024</p>
 </header>
 <h2 id="notatie">Notatie</h2>
 <p>Het lettertype <code>Courier</code> wordt gebruikt om iets op te schrijven dat u op het toetsenbord kunt typen. Uitzondering hierop zijn de volgende speciale toetsen: <code>SPATIEBALK</code>, <code>CTRL</code>, <code>ALT</code>, <code>SUPER</code>, <code>MENU</code>, <code>TAB</code>, <code>HOME</code>, <code>END</code>, <code>ESC</code>, <code>DELETE</code>, <code>PageDown</code>, <code>PageUp</code>, <code>PrintScreen</code>, <code>F1</code>, <code>F2</code> … en <code>ENTER</code>, hier dient u betreffende toets in te drukken in plaats van het woord in te typen.</p>
@@ -228,17 +228,32 @@
 <li><p>Ken onder de afdeling “Starters” <code>SUPER+C</code> aan “Rekenmachine starten”</p></li>
 <li><p>Ken onder de afdeling “Starters” <code>SUPER+I</code> aan Instellingen</p></li>
 </ol></li>
-<li><p>Aangepaste sneltoetsen toevoegen. Open sneltoetsen in de Instellingen.</p>
+<li><p>Aangepaste sneltoetsen toevoegen.</p>
 <ol type="a">
+<li><p>Open sneltoetsen in de Instellingen.</p></li>
 <li><p>Open de afdeling “Aangepaste sneltoets” (onderaan).</p></li>
 <li><p><code>SUPER+SHIFT+I</code> toekennen aan “Afstellingen”</p>
 <ol type="i">
-<li><p>Klik op de + onderaan</p></li>
+<li><p>Klik op de knop ‘Sneltoets toevoegen’</p></li>
 <li><p>Vul onder “Naam” <code>Afstellingen</code> in</p></li>
 <li><p>Vul onder “Opdracht” <code>gnome-tweaks</code> in</p></li>
 <li><p>Klik op “Sneltoets instellen” en druk <code>SUPER+SHIFT+I</code></p></li>
+<li><p>Klik op ‘Toevoegen’ om te bevestigen</p></li>
+<li><p><code>ALT+F4</code> om instellingen te sluiten</p></li>
 </ol></li>
-<li><p>Ken <code>ALT+CTRL+T</code> toe aan de opdracht <code>gnome-terminal</code> onder de naam <code>Terminal</code>.</p></li>
+</ol></li>
+<li><p><code>CTRL+ALT+T</code> toekennen aan de opdracht <code>gnome-terminal</code> onder de naam <code>Terminal</code>.</p>
+<ol type="a">
+<li><p>Open sneltoetsen in de Instellingen.</p></li>
+<li><p>Open de afdeling “Aangepaste sneltoets” (onderaan).</p>
+<ol type="i">
+<li><p>Klik op de + onderaan</p></li>
+<li><p>Vul onder “Naam” <code>Terminal</code> in</p></li>
+<li><p>Vul onder “Opdracht” <code>gnome-terminal</code> in</p></li>
+<li><p>Klik op “Sneltoets instellen” en druk <code>CTRL+ALT+T</code></p></li>
+<li><p>Klik op ‘Toevoegen’ om te bevestigen</p></li>
+<li><p><code>ALT+F4</code> om instellingen te sluiten</p></li>
+</ol></li>
 </ol></li>
 <li><p>Sneltoetsen opzoeken. Open de sneltoetsen instellingen zoals in beschreven in de eerste oefening <em>(Hint: Afdeling “Vensters”)</em>.</p>
 <ol type="a">
@@ -499,7 +514,7 @@
 </ul></li>
 <li><p>Start Firefox met <code>SUPER+1</code></p>
 <ul>
-<li><p>Ga via het hamburgermenu rechtsboven <img src="img/firefox-hamburgermenu.png" height="20" /> naar ‘Hulp’ en dan naar ‘Hulp verkrijgen’</p></li>
+<li><p>Ga via het hamburgermenu rechtsboven <img src="img/firefox-hamburgermenu.png" height="20" /> naar ‘Help’ en dan naar ‘Hulp verkrijgen’</p></li>
 <li><p>Type <code>navigatiegeschiedenis</code> in het zoekvak midden op de pagina</p></li>
 <li><p>Wat betekent geschiedenis in Firefox?</p></li>
 <li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
