--- a/sneltoetsen-per-onderdeel.html
+++ b/sneltoetsen-per-onderdeel.html
@@ -23,7 +23,7 @@
 <header id="title-block-header">
 <h1 class="title">Sneltoetsen per onderdeel</h1>
 <p class="author">Steven Speek</p>
-<p class="date">dinsdag 25 juni 2024</p>
+<p class="date">donderdag 18 juli 2024</p>
 </header>
 <h2 id="rondleiding-gnome">Rondleiding GNOME</h2>
 <table>
@@ -59,44 +59,40 @@
 <td>Applicatie modus in</td>
 </tr>
 <tr class="odd">
-<td><code>ESCAPE</code></td>
-<td>Verlaten/annuleren</td>
-</tr>
-<tr class="even">
 <td><code>SUPER+V</code></td>
 <td>Notificatie venster tonen/verbergen</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td><code>PrintScreen</code></td>
 <td>Schermafdruk maken</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td><code>CTRL+ALT+SHIFT+R</code></td>
 <td>Screenrecording maken</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td><code>CTRL+ALT+DELETE</code></td>
 <td>Computer uitschakelen</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td><code>TAB</code> en <code>SHIFT+TAB</code></td>
 <td></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td><code>→</code>, <code>←</code>, <code>↑</code> en <code>↓</code></td>
 <td>Navigeren</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td><code>SPATIEBALK</code></td>
 <td>Selecteren, indrukken, activeren</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td><code>ENTER</code></td>
 <td>Bevestigen</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td><code>ESC</code></td>
-<td>Annuleren</td>
+<td>Annuleren/Verlaten</td>
 </tr>
 </tbody>
 </table>
