deploy: 9707a0f411307b8b56ef2f9bd78951972b358df8

--- a/sneltoetsen-per-onderdeel.html
+++ b/sneltoetsen-per-onderdeel.html
@@ -23,7 +23,7 @@
 <header id="title-block-header">
 <h1 class="title">Sneltoetsen per onderdeel</h1>
 <p class="author">Steven Speek</p>
-<p class="date">donderdag 18 juli 2024</p>
+<p class="date">donderdag 15 augustus 2024</p>
 </header>
 <h2 id="rondleiding-gnome">Rondleiding GNOME</h2>
 <table>
@@ -221,11 +221,11 @@
 <td>open koppeling op nieuw tabblad</td>
 </tr>
 <tr class="odd">
-<td><code>CLTR+TAB</code></td>
+<td><code>CTRL+TAB</code></td>
 <td>Wissel tussen tabbladen</td>
 </tr>
 <tr class="even">
-<td><code>CLTR+SHIFT+TAB</code></td>
+<td><code>CTRL+SHIFT+TAB</code></td>
 <td>Wissel tussen tabbladen (omgekeerde volgorde)</td>
 </tr>
 <tr class="odd">
