deploy: e2661f902e0a4873674ab0584b84adf96d8313cc

--- a/hoe-de-cursus-te-volgen.html
+++ b/hoe-de-cursus-te-volgen.html
@@ -23,14 +23,14 @@
 <header id="title-block-header">
 <h1 class="title">Hoe de Linux beginnerscursus te volgen</h1>
 <p class="author">Steven Speek</p>
-<p class="date">donderdag 15 augustus 2024</p>
+<p class="date">donderdag 7 november 2024</p>
 </header>
 <h2 id="oefeningen-maken">Oefeningen maken</h2>
 <p>Er zijn twee typen vragen bij de oefeningen, namelijk instructies om een scenario uit te voeren en open vragen. De scenario’s moet u uitvoeren en de antwoorden op de open vragen moet u opschrijven.</p>
 <h2 id="huiswerk">Huiswerk</h2>
 <p>Het huiswerk zal u ongeveer één tot twee uur per les kosten. Maak hier tijd voor vrij in uw agenda.</p>
 <ol type="1">
-<li><p>Lees de <a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/samenvatting.pdf"><em>samenvatting</em></a> van de laatste les door.</p>
+<li><p>Lees de <a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/samenvatting.pdf"><em>samenvatting</em></a> van de laatst behandelde les door.</p>
 <table>
 <thead>
 <tr class="header">
