deploy: 7c4d9238a68693ffcee57259a58470976f4ca892

--- a/hoe-de-cursus-te-volgen.html
+++ b/hoe-de-cursus-te-volgen.html
@@ -82,7 +82,7 @@
 </tr>
 </tbody>
 </table></li>
-<li><p>Neem de presentatie van de laatste les thuis door.</p>
+<li><p>Neem de presentatie van de laatst behandelde les thuis door.</p>
 <table>
 <thead>
 <tr class="header">
