--- a/begrippen.html
+++ b/begrippen.html
@@ -23,7 +23,7 @@
 <header id="title-block-header">
 <h1 class="title">Begrippenlijst voor Linux beginnerscursus</h1>
 <p class="author">Steven Speek</p>
-<p class="date">woensdag 5 februari 2025</p>
+<p class="date">woensdag 19 maart 2025</p>
 </header>
 <dl>
 <dt>Actiemenu</dt>
