--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <header id="title-block-header">
 <h1 class="title">Linux beginnerscursus</h1>
 </header>
-<p>Rondleiding langs de <a href="https://help.gnome.org/">GNOME 43.6</a> desktop van <a href="https://debian.org">Debian 12</a>. In de cursus wordt uitsluitend met de graphische interface gewerkt.</p>
+<p>Rondleiding langs de <a href="https://help.gnome.org/">GNOME 43.6</a> desktop van <a href="https://debian.org">Debian 12</a>. In de cursus wordt uitsluitend met de grafische interface gewerkt.</p>
 <h2 id="publiek">Publiek</h2>
 <p>Deze cursus is bedoeld voor mensen die hun kennis over Linux willen vergroten. Er is geen voorkennis over Linux vereist.</p>
 <h2 id="lesmateriaal">Lesmateriaal</h2>
