deploy: c1d04da247b3bb28a932f6f35b9d25118bb31c39

--- a/index.html
+++ b/index.html
@@ -169,6 +169,11 @@
 </tr>
 </tbody>
 </table>
+<h2 id="computer-gereed-maken-voor-de-cursus">Computer gereed maken voor de cursus</h2>
+<p>Installeer je computer met het cursus profiel van de <a href="https://slspeek.github.io/debian/">Nederlandse Debian Preseeds</a>. Volg de instructies op <a href="https://slspeek.github.io/debian/#gebruik">https://slspeek.github.io/debian/#gebruik</a> met <code>https://slspeek.github.io/debian/cursus.cfg</code> in plaats van <code>https://slspeek.github.io/debian/gnome-personal.cfg</code>.</p>
+<p>Dan log in je in als <code>tux</code> met wachtwoord <code>tux</code>. En draai je in terminal</p>
+<pre><code>$prepare-education-box.sh</code></pre>
+<p>Nu zal het er bij jou precies zo uitzien als in de presentaties.</p>
 <h2 id="broncode">Broncode</h2>
 <p>De broncode van Linux beginnerscursus bevindt zich op het volgende URL: <a href="https://github.com/slspeek/linux-beginners-cursus"><code>https://github.com/slspeek/linux-beginners-cursus</code></a>.</p>
 </body>
